# classificacao_arvore_decisao

./: README.md
classificacao_arvor_decisao/: classificacao_segmento_empresa.ipynb  decision_tree_classifier_model.pkl  pyproject.toml
classificacao_arvor_decisao/datasets/: arquivo_de_teste.csv
