[project]
name = "classificacao-arvor-decisao"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pingouin (>=0.5.5,<0.6.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "gradio (>=5.36.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
